Finish WPF implementation, start adding support for keyboard handling for WPF & Winforms

--- a/Source/Botti/App.config
+++ b/Source/Botti/App.config
@@ -5,7 +5,7 @@
     </startup>
   <appSettings>
     <!-- Options: "Trials", "HeaveHo", "DrunkenWrestlers", "Calculator", "RichardBurnsRally" -->
-    <add key="selectedGame" value="RichardBurnsRally" />
+    <add key="selectedGame" value="Trials" />
     <add key="trackJsonLocation" value="H:\VS2017Projects\Botti\Botti1\Botti\Track runs\" />
   </appSettings>
   <runtime>
