--- a/Source/TasUi/App.config
+++ b/Source/TasUi/App.config
@@ -1,20 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <configSections>
-    <section name="TasGamesSection" type="TasTool.ConfigElements.TasGamesSection, TasTool"/>
+    <section name="TasRunnerSection" type="TasTool.ConfigElements.TasRunnerSection, TasTool"/>
+    <section name="KeyboardHandlerSection" type="TasTool.ConfigElements.KeyboardHandlerSection, TasTool"/>
   </configSections>
-  
+
   <appSettings>
     <add key="trackJsonLocation" value="H:\VS2017Projects\Botti\Botti1\Botti\Track runs\" />
   </appSettings>
 
 
-  <TasGamesSection>
+  <TasRunnerSection>
     <TasGameCollection>
-      <!-- Add new games here -->
+      <!-- Add new game handles here. The window class and window name were obtained using the Spy++ tool and must be exactly correct here, name is free. -->
       <TasGame name="Trials" lpClassName="MT_APPLICATION" windowCaption="Trials 2 - Second Edition"/>
       <TasGame name="HeaveHo" lpClassName="UnityWndClass" windowCaption="HeaveHo" />
       <TasGame name="DrunkenWrestlers" lpClassName="UnityWndClass" windowCaption="Drunken Wrestlers 2" />
+      <TasGame name="Team Fortress 2" lpClassName="Valve001" windowCaption="Team Fortress 2" />
     </TasGameCollection>
-  </TasGamesSection>
+    <KeyboardHandlerCollection>
+      <!-- The available keyboard handler types, button presses are mapped to different byte values in them -->
+      <!-- enabled field is CASE SENSITIVE, only allowed values are "True" & "False" and only one of the values can be True -->
+      <KeyboardHandlerConfigElement name="Winforms" enabled="True"/> <!-- System.Windows.Forms https://docs.microsoft.com/en-us/dotnet/api/system.windows.forms.keys?view=net-5.0 -->
+      <KeyboardHandlerConfigElement name="Wpf" enabled="False"/> <!-- System.Windows.Input https://docs.microsoft.com/en-us/dotnet/api/system.windows.input.key?view=net-5.0 -->
+    </KeyboardHandlerCollection>
+  </TasRunnerSection>
+
+  <KeyboardHandlerSection>
+  </KeyboardHandlerSection>
 </configuration>
