--- a/Source/TasUi/App.config
+++ b/Source/TasUi/App.config
@@ -21,9 +21,10 @@
     <KeyboardHandlerCollection>
       <!-- The available keyboard handler types, button presses are mapped to different byte values in them -->
       <!-- enabled field is CASE SENSITIVE, only allowed values are "True" & "False" and only one of the values can be True -->
-      <KeyboardHandlerConfigElement name="Winforms" enabled="True"/> <!-- System.Windows.Forms https://docs.microsoft.com/en-us/dotnet/api/system.windows.forms.keys?view=net-5.0 -->
-      <KeyboardHandlerConfigElement name="Wpf" enabled="False"/> <!-- System.Windows.Input https://docs.microsoft.com/en-us/dotnet/api/system.windows.input.key?view=net-5.0 -->
+      <KeyboardHandlerConfigElement name="WinFormsKeyboardHandler" enabled="False"/> <!-- System.Windows.Forms https://docs.microsoft.com/en-us/dotnet/api/system.windows.forms.keys?view=net-5.0 -->
+      <KeyboardHandlerConfigElement name="WpfKeyboardHandler" enabled="True"/> <!-- System.Windows.Input https://docs.microsoft.com/en-us/dotnet/api/system.windows.input.key?view=net-5.0 -->
     </KeyboardHandlerCollection>
+
   </TasRunnerSection>
 
   <KeyboardHandlerSection>
