Add AssettoCorsa Competizione config

--- a/Source/TasUi/App.config
+++ b/Source/TasUi/App.config
@@ -17,6 +17,7 @@
       <TasGame name="HeaveHo" lpClassName="UnityWndClass" windowCaption="HeaveHo" />
       <TasGame name="DrunkenWrestlers" lpClassName="UnityWndClass" windowCaption="Drunken Wrestlers 2" />
       <TasGame name="Team Fortress 2" lpClassName="Valve001" windowCaption="Team Fortress 2" />
+	  <TasGame name="ACC" lpClassName="UnrealWindow" windowCaption="AC2  " />
     </TasGameCollection>
     <KeyboardHandlerCollection>
       <!-- The available keyboard handler types, button presses are mapped to different byte values in them -->
