Implement input recording and refactor track commands to use .csv instead of .json

--- a/Source/TasUi/App.config
+++ b/Source/TasUi/App.config
@@ -6,7 +6,8 @@
   </configSections>
 
   <appSettings>
-    <add key="trackJsonLocation" value="C:\Koodit\TAS-Tool\Source\TasUi\Track runs" />
+    <add key="trackJsonLocation" value="C:\Koodit\TAS-Tool\Source\TasUi\bin\Release\netcoreapp3.1\Track runs" />
+    <add key="inputRecordingsLocation" value="C:\temp"/>
   </appSettings>
 
 
@@ -17,7 +18,9 @@
       <TasGame name="HeaveHo" lpClassName="UnityWndClass" windowCaption="HeaveHo" />
       <TasGame name="DrunkenWrestlers" lpClassName="UnityWndClass" windowCaption="Drunken Wrestlers 2" />
       <TasGame name="Team Fortress 2" lpClassName="Valve001" windowCaption="Team Fortress 2" />
-	  <TasGame name="ACC" lpClassName="UnrealWindow" windowCaption="AC2  " />
+	    <TasGame name="ACC" lpClassName="UnrealWindow" windowCaption="AC2  " />
+	    <TasGame name="Drift King" lpClassName="UnityWndClass" windowCaption="DriftKing" />
+      <TasGame name="Kerbal Space Program" lpClassName="UnityWndClass" windowCaption="Kerbal Space Program" />
     </TasGameCollection>
     <KeyboardHandlerCollection>
       <!-- The available keyboard handler types, button presses are mapped to different byte values in them -->
