--- a/Source/TasUi/TasUi.csproj
+++ b/Source/TasUi/TasUi.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MouseKeyHook" Version="5.6.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
   </ItemGroup>
 
