Removed code related to JSON track data + minor refactorings

--- a/Source/TasUi/App.config
+++ b/Source/TasUi/App.config
@@ -6,8 +6,8 @@
   </configSections>
 
   <appSettings>
-    <add key="trackJsonLocation" value="C:\Koodit\TAS-Tool\Source\TasUi\bin\Release\netcoreapp3.1\Track runs" />
-    <add key="inputRecordingsLocation" value="C:\temp"/>
+    <add key="trackJsonLocation" value="C:\Temp\TASTracks" />
+    <add key="inputRecordingsLocation" value="C:\Temp\TASTracks"/>
   </appSettings>
 
 
@@ -25,8 +25,8 @@
     <KeyboardHandlerCollection>
       <!-- The available keyboard handler types, button presses are mapped to different byte values in them -->
       <!-- enabled field is CASE SENSITIVE, only allowed values are "True" & "False" and only one of the values can be True -->
-      <KeyboardHandlerConfigElement name="WinFormsKeyboardHandler" enabled="True"/> <!-- System.Windows.Forms https://docs.microsoft.com/en-us/dotnet/api/system.windows.forms.keys?view=net-5.0 -->
-      <KeyboardHandlerConfigElement name="WpfKeyboardHandler" enabled="False"/> <!-- System.Windows.Input https://docs.microsoft.com/en-us/dotnet/api/system.windows.input.key?view=net-5.0 -->
+      <KeyboardHandlerConfigElement name="WinFormsKeyboardHandler" enabled="False"/> <!-- System.Windows.Forms https://docs.microsoft.com/en-us/dotnet/api/system.windows.forms.keys?view=net-5.0 -->
+      <KeyboardHandlerConfigElement name="WpfKeyboardHandler" enabled="True"/> <!-- System.Windows.Input https://docs.microsoft.com/en-us/dotnet/api/system.windows.input.key?view=net-5.0 -->
     </KeyboardHandlerCollection>
 
   </TasRunnerSection>
